构建有内容的网页

--- a/Web/projects/structuring-web/styles/style.css
+++ b/Web/projects/structuring-web/styles/style.css
@@ -1,4 +1,12 @@
-#info {
-    display: block;
-    margin: auto auto;
+header {
+    background-color: #54d454;
+}
+
+nav {
+    color: azure;
+    font-size: 20px;
+}
+
+h2 {
+    background-color: #54d454;
 }
